Clipper: Fixes #5675: Notebook selection list could be too wide

--- a/packages/app-clipper/popup/src/App.css
+++ b/packages/app-clipper/popup/src/App.css
@@ -134,6 +134,7 @@ body {
 
 .App .Folders select {
 	flex: 1;
+	width: 100%;
 }
 
 .App .Tags input {
